--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+
+
+
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,6 +14,22 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="author" content="SemiColonWeb" />
+  
+    <!-- Stylesheets
+    ============================================= -->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:300,400,500,600,700|Crete+Round:400i" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.css"/>
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/swiper.css"  />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/dark.css" type="text/css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/font-icons.css" type="text/css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/animate.css" type="text/css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/magnific-popup.css" type="text/css" />
+  
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/responsive.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +46,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="stretched">
+    <div id="wrapper" className="clearfix">
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
