--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="SemiColonWeb" />
+    <meta name="google-site-verification" content="i6CUo4INySJ4T7q-D_rcHebzh459j9Y65tEvFTQ9A-o" />
   
     <!-- Stylesheets
     ============================================= -->
